@@ -1,5 +1,8 @@
 2009-03-14  Curtis Gedak  <gedakc@gmail.com>
 
+	* src/GParted_Core.cc: Added initial support for dmraid devices.
+	  - Closes GParted bug #317262
+
 	* include/DMRaid.h,
 	  include/Makefile.am,
 	  src/DMRaid.cc,
